@@ -96,10 +96,10 @@ execution depending on system parameters.</p>
     <td valign="top">This contains the behaviour of the "file" type.
       If true, the available task will, when
       searching for a file, search not only the directories specified but
-      will also search the parent and grandparent directories of those
+      will also search the parent directories of those
       specified.
       If false, only the directories specified will be searched.
-      Defaults to "true".
+      Defaults to "false".
       <em>Since Ant 1.7</em>
     </td>
     <td align="center" valign="top">No</td>
